Fix back button being borked on firefox
The back button in the how-to-use popup was borked in firefox. I saw
that commit `05dd123edbc70e45e6cb09dcdfcf77a7906bcca8` deletes the
width attribute from #close-button (the button in question) in
love-compatibility/styles.css, but then the width attriubte is just
inherited from common/styles.css. This fixes that by using unset.

--- a/source/love-compatibility/styles.css
+++ b/source/love-compatibility/styles.css
@@ -232,6 +232,7 @@ input[type="text"] {
   position: absolute;
   top: 15px;
   right: 15px;
+  width: unset;
 }
 #go-back {
   margin: auto;
